# codex-django

./: .djlintrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LIBRARY_DOMAIN_REFACTOR_PROMPTS.md  LIB_MOBILE_REF.md  NOTIFICATION_SYSTEM.md  README.md  implementation_plan.md  mkdocs.yml  pyproject.toml  redis-backends-recovery.md  verify_init.py  versions.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
0.2.5/: 404.html  index.html  objects.inv  sitemap.xml
0.2.5/changelog/: index.html
0.2.5/en/: index.html
0.2.5/ru/: index.html
0.2.5/search/: search_index.json
0.2.7/: 404.html  index.html  objects.inv  sitemap.xml
0.2.7/changelog/: index.html
0.2.7/en/: index.html
0.2.7/ru/: index.html
0.2.7/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/changelog/: index.html
0.3.0/en/: index.html
0.3.0/ru/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/changelog/: index.html
0.4.0/en/: index.html
0.4.0/ru/: index.html
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  objects.inv  sitemap.xml
0.4.1/changelog/: index.html
0.4.1/en/: index.html
0.4.1/ru/: index.html
0.4.1/search/: search_index.json
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/changelog/: index.html
0.4.2/en/: index.html
0.4.2/ru/: index.html
0.4.2/search/: search_index.json
0.4.3/: 404.html  index.html  objects.inv  sitemap.xml
0.4.3/changelog/: index.html
0.4.3/en/: index.html
0.4.3/ru/: index.html
0.4.3/search/: search_index.json
0.4.4/: 404.html  index.html  sitemap.xml
0.4.4/changelog/: index.html
0.4.4/en/: index.html
0.4.4/ru/: index.html
0.4.4/search/: search_index.json
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/changelog/: index.html
0.5.0/en/: index.html
0.5.0/ru/: index.html
0.5.0/search/: search_index.json
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/changelog/: index.html
0.5.1/en/: index.html
0.5.1/ru/: index.html
0.5.1/search/: search_index.json
0.5.2/: 404.html  index.html  objects.inv  sitemap.xml
0.5.2/changelog/: index.html
0.5.2/en/: index.html
0.5.2/ru/: index.html
0.5.2/search/: search_index.json
0.5.3/: 404.html  index.html  sitemap.xml
0.5.3/changelog/: index.html
0.5.3/en/: index.html
0.5.3/ru/: index.html
0.5.3/search/: search_index.json
0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
0.6.0/changelog/: index.html
0.6.0/en/: index.html
0.6.0/ru/: index.html
0.6.0/search/: search_index.json
0.6.1/: 404.html  index.html  sitemap.xml
0.6.1/changelog/: index.html
0.6.1/en/: index.html
0.6.1/ru/: index.html
0.6.1/search/: search_index.json
0.6.2/: 404.html  index.html  sitemap.xml
0.6.2/changelog/: index.html
0.6.2/en/: index.html
0.6.2/ru/: index.html
0.6.2/search/: search_index.json
0.6.3/: 404.html  index.html  sitemap.xml
0.6.3/changelog/: index.html
0.6.3/en/: index.html
0.6.3/ru/: index.html
0.6.3/search/: search_index.json
0.6.5/: 404.html  index.html  sitemap.xml
0.6.5/changelog/: index.html
0.6.5/en/: index.html
0.6.5/ru/: index.html
0.6.5/search/: search_index.json
0.6.6/: 404.html  index.html  sitemap.xml
0.6.6/changelog/: index.html
0.6.6/en/: index.html
0.6.6/ru/: index.html
0.6.6/search/: search_index.json
docs/: booking_multi_service_handoff_plan.md  changelog.md  index.md
docs/en/: README.md  (+1 more)
graphify-out/: GRAPH_REPORT.md
tests/: conftest.py  settings.py
(+1444 files in other folders)
