[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "codex-django"
dynamic = ["version"]
description = "Django runtime utilities, mixins, adapters, and reusable modules for Codex projects"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "CodexDLC" }]
keywords = ["django", "mixins", "runtime", "notifications", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
]
dependencies = [
    "django>=5.0",
    "loguru>=0.7.0",
    "redis>=5.0",
    "Pillow>=10.0.0",
    "django-prometheus>=2.3.0",
    "django-unfold>=0.20.0",
    "django-import-export>=4.0.0",
    "django-lifecycle>=1.2.0",
    "django-allauth>=0.61.0",
    "django-extensions>=3.2.0",
    "django-debug-toolbar>=4.3.0",
    "django-ninja>=1.1.0",
    "django-modeltranslation>=0.19.0",
    "codex-core",
    "codex-services",
    "codex-platform",
    "django-encrypted-model-fields>=0.6",
]

[project.urls]
Homepage = "https://github.com/codexdlc/codex-django"
Documentation = "https://codexdlc.github.io/codex-django/"
Repository = "https://github.com/codexdlc/codex-django"
Issues = "https://github.com/codexdlc/codex-django/issues"

[project.optional-dependencies]
cli = ["codex-django-cli>=0.1.0"]
dev = [
    "codex-django[cli]",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "pre-commit>=3.0",
]
maintainer = [
    "codex-django[dev]",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-include-markdown-plugin",
    "mike>=2.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_django"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "mypy_django_plugin.main"]
exclude = [
    "src/codex_django/cli/blueprints",
    "src/codex_django/cabinet/migrations",
]

[[tool.mypy.overrides]]
module = [
    "loguru.*",
    "django.*",
    "codex_platform.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "encrypted_model_fields.*",
    "django_lifecycle.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "--cov=src/codex_django --cov-report=term-missing"
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (real file I/O via tmp_path)",
    "e2e: end-to-end tests via subprocess with isolated venv",
]

[tool.coverage.run]
source = ["src/codex_django"]
omit = ["*/_draft/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90  # Runtime baseline reached on March 29, 2026 audit pass.

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B602", "B605", "B607", "B404"]
